# pysynthbio

./: .gitignore  .setupignore  AGENT_INSTRUCTIONS_R_UPDATE.md  Makefile  README.md  R_CLIENT_UPDATE_INSTRUCTIONS.md  conf.py  gem-1-bulk_predict-metadata.json  gem-1-sc_predict-metadata.json  index.rst  pyproject.toml  test_api_call.py
.cursor/rules/: security-posture.mdc
.gemini/: config.yaml  styleguide.md
.github/workflows/: build-docs-version.yml  deploy-docs.yml  github-actions-conventional-pr-titles.yml  new-release.yml  sync-docs-to-mintlify.yml  test-docs-build.yml  test-package.yml
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: environment.pickle  index.doctree
_build/html/_sources/: index.rst.txt
_static/: custom.css
_templates/: about.html  sidebarlogo.html
docs/: README.md  RELEASE_PROCESS.md  api.rst  development.rst  getting-started.mdx  index.mdx  installation.mdx
docs-external/: available-metadata.mdx  docs.json  getting-started.mdx  index.mdx  installation.mdx  license.mdx
docs-external/models/: reference-conditioning.mdx
docs-redirect/: 404.html  index.html
docs/models/: baseline.mdx  metadata-prediction.mdx  reference-conditioning.mdx
pysynthbio/src/: __init__.py  call_model_api.py
source/: conf.py  index.rst
src/: __init__.py  call_model_api.py  setup.py
src/pysynthbio/: __init__.py  call_model_api.py  get_example_query.py  http_client.py  key_handlers.py  list_models.py  output_transformers.py
tests/: test_call_model_api.py  test_http_client.py  test_integration.py  test_integration_2.py  test_key_handlers.py  test_local_integration.py  test_log_cpm.py  test_output_transformers.py
usage/: available-metadata.rst  baseline.rst  gem1.rst  getting-started.rst  installation.rst  license.rst  metadata-prediction.rst  query_design.rst  quickstart.rst  reference-conditioning.rst  v1.rst  v2.rst
