[project]
name = "pysynthbio"
version = "4.0.5"
description = "A package to retrieve data and models from Synthesize Bio's API"
authors = [
    { name = "Alex David" },
    { name = "Candace Savonen" },
]
readme = "README.md"
license = "MIT"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "requests",
    "keyring>=23.0.0",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/synthesizebio/pysynthbio"
Issues = "https://github.com/synthesizebio/pysynthbio/issues"

[project.optional-dependencies]
# Core optional dependencies - similar to R options
secure = [
    "keyring>=23.0.0",
]
# Install all optional dependencies
all = [
    "keyring>=23.0.0",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff",
    "mypy",
    "black",
    "build",
]
# Documentation dependencies
docs = [
    "sphinx",
    "sphinx-autobuild",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pysynthbio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[[tool.mypy.overrides]]
module = ["setuptools", "pandas-stubs", "requests", "keyring"]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W"]
ignore = []
